--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "@mui/material": "^5.15.0",
-    "@mui/x-date-pickers": "^6.9.0",
-    "dayjs": "^1.11.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+  "@mui/icons-material": "^5.15.0",
+  "@mui/x-date-pickers": "^6.9.0",
+  "dayjs": "^1.11.9",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
